--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <html>
     <head><tittle><font color="black" size="6" face="Papyrus"><center>Men&uacute</center></font></tittle></head>
     <style type="text/css">
@@ -10,7 +11,7 @@
         }
     </style>
 <body link="White" vlink="Red" alink="olive"><br>
-    <embed src="" align="right" width="800" height="600">
+    <embed src="video2.2.mp4" align="right" width="800" height="600">
     <a name="Indice">
         <a href="https://axelruiz17.github.io/ebytexto-./"><h1>Estrctura básica y texto</h1></a>
         <a href="https://axelruiz17.github.io/listaylineas./"><h1>Listas y Líneas</h1></a>
@@ -20,4 +21,4 @@
         <a href="https://axelruiz17.github.io/continentes-/"><h1>Continentes</h1></a>
     </a>
 </body>
-</html>
+</h
