--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="https://axelruiz17.github.io/imagenesymultimedia-/"><h1>Imagenes y Multimedia</h1></a>
         <a href="https://axelruiz17.github.io/HIpervinculos../"><h1>Hiperv&iacutenculos</h1></a>
         <a href="https://axelruiz17.github.io/tablas../"><h1>Tablas</h1></a>
-        <a href="https://axelruiz17.github.io/continentes-/"><h1>Continentes</h1></a>
+        <a href="https://axelruiz17.github.io/continentes./"><h1>Continentes</h1></a>
     </a>
 </body>
 </h
