--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <html>
     <head><tittle><font color="black" size="6" face="Papyrus"><center>Men&uacute</center></font></tittle></head>
     <style type="text/css">
@@ -12,13 +11,17 @@
     </style>
 <body link="White" vlink="Red" alink="olive"><br>
     <embed src="video2.2.mp4" align="right" width="800" height="600">
+<h1>Trabajo en clase</h1>
     <a name="Indice">
         <a href="https://axelruiz17.github.io/ebytexto-./"><h1>Estrctura básica y texto</h1></a>
         <a href="https://axelruiz17.github.io/listaylineas./"><h1>Listas y Líneas</h1></a>
         <a href="https://axelruiz17.github.io/imagenesymultimedia-/"><h1>Imagenes y Multimedia</h1></a>
         <a href="https://axelruiz17.github.io/HIpervinculos../"><h1>Hiperv&iacutenculos</h1></a>
         <a href="https://axelruiz17.github.io/tablas../"><h1>Tablas</h1></a>
-        <a href="https://axelruiz17.github.io/continentes./"><h1>Continentes</h1></a>
+
+<hr><br><h1>Practicas</h1></hr
+
+        <br><br><a href="https://axelruiz17.github.io/continentes./"><h1>Continentes</h1></a>
     </a>
 </body>
 </h
