--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         <a href="https://axelruiz17.github.io/imagenesymultimedia-/"><h1>Imagenes y Multimedia</h1></a>
         <a href="https://axelruiz17.github.io/HIpervinculos../"><h1>Hiperv&iacutenculos</h1></a>
         <a href="https://axelruiz17.github.io/tablas../"><h1>Tablas</h1></a>
+        <a href="https://axelruiz17.github.io/FRAME_HORIZONTAL/"><h1>Frame Horizontal</h1></a>
+        <a href="https://axelruiz17.github.io/frame-vertical/"><h1>Frame Vertical</h1></a>
+        <a href="https://axelruiz17.github.io/colores/"><h1>Frame colores</h1></a>
+        <a href="https://axelruiz17.github.io/frame-combinado/"><h1>Frame Combinado</h1></a>
 
 <hr><br><h1>Practicas</h1></hr
 
