--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <html>
     <head><tittle><font color="black" size="6" face="Papyrus"><center>Men&uacute</center></font></tittle></head>
     <style type="text/css">
@@ -26,6 +27,8 @@
 <hr><br><h1>Practicas</h1></hr
 
         <br><br><a href="https://axelruiz17.github.io/continentes./"><h1>Continentes</h1></a>
+<br><br><a href="https://axelruiz17.github.io/triangulos/"><h1>Triángulos</h1></a>
+
     </a>
 </body>
 </h
