--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 <hr><br><h1>Practicas</h1></hr
 
         <br><br><a href="https://axelruiz17.github.io/continentes./"><h1>Continentes</h1></a>
-<br><br><a href="https://axelruiz17.github.io/triangulos/"><h1>Triángulos</h1></a>
+        <br><br><a href="https://axelruiz17.github.io/triangulos/"><h1>Triángulos</h1></a>
 
     </a>
 </body>
-</h
+</html>
