--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <html>
     <head><tittle><font color="black" size="6" face="Papyrus"><center>Men&uacute</center></font></tittle></head>
     <style type="text/css">
@@ -28,6 +27,11 @@
 
         <br><br><a href="https://axelruiz17.github.io/continentes./"><h1>Continentes</h1></a>
         <br><br><a href="https://axelruiz17.github.io/triangulos/"><h1>Triángulos</h1></a>
+
+<hr><br><h1>Personal</h1></hr
+ <br><br><a href="https://axelruiz17.github.io/yo/"><h1>Continentes</h1></a>
+
+
 
     </a>
 </body>
