--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         <a href="https://axelruiz17.github.io/colores/"><h1>Frame colores</h1></a>
         <a href="https://axelruiz17.github.io/frame-combinado/"><h1>Frame Combinado</h1></a>
 
-<hr><br><h1>Practicas</h1></hr
+<hr><br><h1>Practicas</h1></hr>
 
         <br><br><a href="https://axelruiz17.github.io/continentes./"><h1>Continentes</h1></a>
         <br><br><a href="https://axelruiz17.github.io/triangulos/"><h1>Triángulos</h1></a>
 
-<hr><br><h1>Personal</h1></hr
+<hr><br><h1>Personal</h1></hr>
  <br><br><a href="https://axelruiz17.github.io/yo/"><h1>Continentes</h1></a>
 
 
