--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <br><br><a href="https://axelruiz17.github.io/triangulos/"><h1>Triángulos</h1></a>
 
 <hr><br><h1>Personal</h1></hr>
- <br><br><a href="https://axelruiz17.github.io/yo/"><h1>Continentes</h1></a>
+ <br><br><a href="https://axelruiz17.github.io/yo/"><h1>YO</h1></a>
 
 
 
