--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 
 <hr><br><h1>Personal</h1></hr>
  <br><br><a href="https://axelruiz17.github.io/yo/"><h1>YO</h1></a>
+<br><br><a href="https://axelruiz17.github.io/opinion/"><h1>opinion</h1></a>
+
 
 
 
